TipTac Changes | 2016 Aug 30
----------------------------
- TipTacItemRef: Fixed issue with incorrect itemLevel showing for items that have been upgraded.

TipTac Changes | 2016 Aug 24
----------------------------
- TipTacItemRef: Fixed certain items with upgrades not displaying their upgraded ID.

TipTac Changes | 2016 Jul 23
----------------------------
- Fixed a few more API changes related to SetTexture -> SetColorTexture. Thanks vincentSDSH.
- Options: Fixed menu dropdowns appearing behind other frames. Thanks again vincentSDSH.

TipTac Changes | 2016 Jul 21
----------------------------
- TOC version updated to 70000 for the Legion 7.0.3 pre-patch.
- Updated the API usage to fit with the changes in the 7.0.3 patch.

TipTac Changes | 2015 Dec 07
----------------------------
- Added an option for battle pet tips, under the "Special" category. If you encounter issues with battle pet tips, disable this.
- The TipTacItemRef addon has been updated to fix the itemLevel issues with Timewarped items. If you still encounter issues with itemLevels, disable the "Show Item Level & ID" setting under the TipTacOptions.

TipTac Changes | 2015 Jul 02
----------------------------
- TOC version changed to 60200 for the 6.2 patch.

TipTac Changes | 2015 Mar 04
----------------------------
- TOC version updated to 60100 for the 6.1 patch.
- The "Targeting" text is now using a localized string (BINDING_HEADER_TARGETING). It may not be entirely correct for all locales though.
- Fixed an anchoring issue for mouse anchored tooltips. It was especially noticeable together with Titan Panel.

TipTac Changes | 2015 Jan 14
----------------------------
- If you had your tooltip anchored to the mouse, you may have had some issues with a few UI frames, especially the Garrison UI. An exception for "ANCHOR_CURSOR_RIGHT" was added, which should fix this (thanks ywfn).
- Added some fixes which should resolve the issues where the tooltip background color changes into navy blue.